# bmaptool

./: .git-blame-ignore-revs  .gitchangelog.rc  .gitignore  CHANGELOG.md  HISTORY.md  README.md  make_a_release.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: bandit.yml  ci.yml  debs.yml  release.yml  sphinx.yml  wheels.yml
bmaptool/: BmapCopy.py  CLI.py  Filemap.py  TransRead.py
bmaptools/: CLI.py  TransRead.py
debian/: changelog  clean  control  copyright  gbp.conf  rules  watch
debian/tests/: control  smoke  web-server.py
debian/upstream/: metadata
docs/man1/: bmaptool.1
packaging/: bmap-tools.spec  bmaptool.changes  bmaptool.spec
src/bmaptool/: BmapCopy.py  BmapCreate.py  BmapHelpers.py  CLI.py  Filemap.py  TransRead.py  __main__.py
tests/: conftest.py  helpers.py  test_CLI.py  test_api_base.py  test_bmap_helpers.py  test_checksum_retry.py  test_compat.py  test_filemap.py
tests/oldcodebase/: BmapCopy1_0.py  BmapCopy2_0.py  BmapCopy2_1.py  BmapCopy2_2.py  BmapCopy2_3.py  BmapCopy2_4.py  BmapCopy2_5.py  BmapCopy2_6.py  BmapCopy3_0.py
tests/test-data/gnupg/: pubring.kbx  random_seed  trustdb.gpg
tests/test-data/gnupg/openpgp-revocs.d/: 927FF9746434704C5774BE648D49DFB1163BDFB4.rev
