[project]
name = "bmaptool"
description = "BMAP tools"
dynamic = ["version"]
dependencies = [
    "defusedxml",
    "gpg >= 1.10.0",
    'importlib-metadata>=4.6; python_version < "3.10"',
]
requires-python = ">=3.8"
maintainers = [
    {name = "Joshua Watt", email = "JPEWhacker@gmail.com"},
    {name = "Trevor Woerner", email = "twoerner@gmail.com"},
    {name = "Tim Orling", email = "ticotimo@gmail.com"},

]
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Embedded Systems",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "black >= 22.3.0",
    "pylint >= 3.1.0",
]
cov = [
    "coverage",
    "coverage_python_version",
]
test = [
    "pytest",
    "pytest-cov",
    "six >= 1.16.0",
]

[project.urls]
Homepage = "https://github.com/yoctoproject/bmaptool"
Repository = "https://github.com/yoctoproject/bmaptool.git"
Issues = "https://github.com/yoctoproject/bmaptool/issues"
Changelog = "https://github.com/yoctoproject/bmaptool/blob/master/CHANGELOG.md"

[project.scripts]
bmaptool = "bmaptool.CLI:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.tox",
  "/contrib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bmaptool"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "src/bmaptool",]
log_cli =  false
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
addopts = "-ra -q -p no:warnings --capture=fd"
markers = [
    "slow: marks tests as slow (run with --slow)",
    "linux: runs on this platform (or not)",
    "darwin",
    "win32",
]

[tool.coverage.run]
branch = true
source = ["src/bmaptool"]
plugins = ["coverage_python_version"]

[tool.coverage.paths]
source = [
    "src/",
    ".tox/*/site-packages"
]

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | docs
  | dist
  | tests
)/
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["contrib"]
