[project]
name = "bmaptool"
description = "BMAP tools"
dynamic = ["version"]
dependencies = [
    "gpg >= 1.10.0",
]
requires-python = ">= 3.8"
maintainers = [
    {name = "Joshua Watt", email = "JPEWhacker@gmail.com"},
    {name = "Trevor Woerner", email = "twoerner@gmail.com"},
    {name = "Tim Orling", email = "ticotimo@gmail.com"},

]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Embedded Systems",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "black >= 22.3.0",
    "six >= 1.16.0",
]

[project.urls]
Homepage = "https://github.com/yoctoproject/bmaptool"
Repository = "https://github.com/yoctoproject/bmaptool.git"
Issues = "https://github.com/yoctoproject/bmaptool/issues"

[project.scripts]
bmaptool = "bmaptool.CLI:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/bmaptool/CLI.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.tox",
  "/contrib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bmaptool"]

[tool.black]
line-length = 88
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | debian
  | docs
  | dist
  | tests
)/
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["contrib", "debian"]
