[project]
name = "bmaptool"
description = "BMAP tools"
dynamic = ["version"]
dependencies = [
    # NOTE: gpg is not installed because it must come from the system GPG package
    # (e.g. python3-gpg on Ubuntu) and not from PyPi. The PyPi version is very old
    # and no longer functions correctly
    #"gpg >= 1.10.0",
]
requires-python = ">= 3.9"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
authors = [
    {name = "Joshua Watt", email = "JPEWhacker@gmail.com"},
    {name = "Trevor Woerner", email = "twoerner@gmail.com"},
    {name = "Tim Orling", email = "ticotimo@gmail.com"},

]
maintainers = [
    {name = "Trevor Woerner", email = "twoerner@gmail.com"},
    {name = "Joshua Watt", email = "JPEWhacker@gmail.com"},
    {name = "Tim Orling", email = "ticotimo@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Embedded Systems",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "black >= 22.3.0",
    "six >= 1.16.0",
]

[project.urls]
Homepage = "https://github.com/yoctoproject/bmaptool"
Repository = "https://github.com/yoctoproject/bmaptool.git"
Issues = "https://github.com/yoctoproject/bmaptool/issues"
Changelog = "https://github.com/yoctoproject/bmaptool/blob/main/CHANGELOG.md"

[project.scripts]
bmaptool = "bmaptool.CLI:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/bmaptool/__init__.py"
